# OncoLearn

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
.devcontainer/amd/: devcontainer.json
.devcontainer/amd-wsl/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/dev-amd/: devcontainer.json
.devcontainer/dev-amd-wsl/: devcontainer.json
.devcontainer/dev-cpu/: devcontainer.json
.devcontainer/dev-nvidia/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.devcontainer/pytorch-prod-amd/: devcontainer.json
.devcontainer/pytorch-prod-cpu/: devcontainer.json
.devcontainer/pytorch-prod-nvidia/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml
configs/: brca_test_config.yaml  train_config.yaml
data/: TCIA_TCGA-BRCA_09-16-2015_part1_of_4.tcia  TCIA_TCGA-BRCA_09-16-2015_part2_of_4.tcia  TCIA_TCGA-BRCA_09-16-2015_part3_of_4.tcia  TCIA_TCGA-BRCA_09-16-2015_part4_of_4.tcia
data/cptac/manifests/: PDC_study_manifest_01122026_170355.csv
data/tcia/configs/: acc.yaml  blca.yaml  brca.yaml  cesc.yaml  coad.yaml  esca.yaml  gbm.yaml  hnsc.yaml  kich.yaml  kirc.yaml  kirp.yaml  laml.yaml  lgg.yaml  lihc.yaml  luad.yaml  lusc.yaml  ov.yaml  paad.yaml  prad.yaml  read.yaml  sarc.yaml  (+5 more)
docs/: GitHub_Authentication_Guide.md  Models.md  Presentations.md  TCGA_Data_Download_Guide.md  TCIA_Data_Download_Guide.md
k8s/: Makefile  README.md  configmap.yaml  data-downloader-job.yaml  kustomization.yaml  namespace.yaml  storage.yaml  training-config.yaml  training-deployment.yaml
notebooks/: Transformer_RNABert.ipynb  Transformer_RNABert_RESTRUCTURED.ipynb
notebooks/data/: eda_cohorts.ipynb  preprocess_merge_cohort_data.ipynb  preprocess_tcia_split_manifest.ipynb
outputs/brca_test_run/: config.yaml
scripts/: federate-XGBoost.py  local-XGBoost.py
scripts/data/: TCGA-BRCA.ipynb  TCGA_Lung.R  download.py  download_all_tcga.sh  download_tcga_brca.sh  download_tcga_coad.sh  download_tcga_laml.sh  download_tcga_luad.sh  download_tcga_lusc.sh  download_tcga_meso.sh  download_tcga_skcm.sh  download_tcia.py  download_xena.py  generate_cancer_configs.py  generate_cancer_configs_api.py
src/multimodal/: .gitignore  job.py
src/oncolearn/: create_nvflare_job.py  train.py  train_nvflare.py  train_standalone.py
test/: test_dataloader.py
(+237 files in other folders)
